<package>
  <name>cram_beliefstate</name>
  <version>1.0.0</version>
  <description>
    To be able to use this package, you will need the following dependencies:

      * designator_integration_lisp: https://github.com/code-iai/designator_integration
      * iai_common_msgs: https://github.com/code-iai/iai_common_msgs
      * semrec: https://github.com/code-iai/semrec
  </description>

  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/cram_beliefstate</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roslisp</build_depend>
  <build_depend>roslisp_utilities</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cram_language</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>cram_utilities</build_depend>
  <build_depend>cram_common_failures</build_depend>
  <build_depend>cl_transforms</build_depend>
  <build_depend>cl_transforms_stamped</build_depend>
  <build_depend>cram_tf</build_depend>
  <build_depend>designator_integration_lisp</build_depend>
  <build_depend>designator_integration_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roslisp</run_depend>
  <run_depend>roslisp_utilities</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>cram_language</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>cram_utilities</run_depend>
  <run_depend>cram_common_failures</run_depend>
  <run_depend>cl_transforms</run_depend>
  <run_depend>cl_transforms_stamped</run_depend>
  <run_depend>cram_tf</run_depend>
  <run_depend>designator_integration_lisp</run_depend>
  <run_depend>designator_integration_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
